// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewPage renders draft template 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Edit Template",
      "to": "/path/to/edit/template",
    }
  }
  empty={Object {}}
  title="Test Draft (Draft)"
>
  <PreviewPanel
    html="<h1>Test Draft Template</h1>"
    text=""
  />
</Page>
`;

exports[`PreviewPage renders loading 1`] = `<Loading />`;

exports[`PreviewPage renders published template 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Edit Template",
      "to": "/path/to/edit/template",
    }
  }
  empty={Object {}}
  title="Test Published (Draft)"
>
  <PreviewPanel
    html="<h1>Test Published Template</h1>"
    text=""
  />
</Page>
`;
